Update 공지사항 “전쟁과여성인권박물관-10주년-기념사업”

--- a/content/connect/notice/전쟁과여성인권박물관-10주년-기념사업.md
+++ b/content/connect/notice/전쟁과여성인권박물관-10주년-기념사업.md
@@ -7,9 +7,9 @@ image: /img/웹자보-10주년-기념-행사-전체_최종-001.png
 home_sticky: true
 pinned: false
 ---
-####  전쟁과여성인권박물관 10주년 기념 행
+####  전쟁과여성인권박물관 10주년 기념 행사 
 
-* **<기록, 사람을 잇다> 기념식&라운드테이블**
+*  **<기록, 사람을 잇다> 기념식&라운드테이블**
 
   \- 일시: 2022.05.05.(목) 11:00~14:00
 
