Update 공지사항 “전쟁과여성인권박물관-평화의-골목-벽화-그리기-자원활동가-모집”

--- a/content/connect/notice/전쟁과여성인권박물관-평화의-골목-벽화-그리기-자원활동가-모집.md
+++ b/content/connect/notice/전쟁과여성인권박물관-평화의-골목-벽화-그리기-자원활동가-모집.md
@@ -3,7 +3,7 @@ title: 평화의 골목-벽화 그리기 자원활동가 모집(4/15~4/22)
 author: 관리자
 date: 2022-04-15T05:03:23.054Z
 image: /img/벽화그리기자원봉사.jpg
-home_sticky: true
+home_sticky: false
 pinned: false
 ---
 전쟁과여성인권박물관에서는 개관 10주년을 맞이하여 평화의 골목 벽화그리기를 새롭게 하고자 함께 하실 자원활동가를 모집합니다.
