--- a/content/slides/수요페미클럽-일본군위안부-문제-다시-보기.md
+++ b/content/slides/수요페미클럽-일본군위안부-문제-다시-보기.md
@@ -2,7 +2,7 @@
 weight: "1"
 upper_message: 전쟁과여성인권박물관 개관 10주년 기념 시민강좌
 title: "수요페미클럽: 일본군'위안부' 문제 다시 보기"
-sub_title: Zoom 강의 (수강료 무료)
+sub_title: Zoom 강의 (수강료 무료, 선택 신청 가능)
 date: 2022-04-20T07:31:18.677Z
 image: /img/박물관-10주년-시민강좌_복사본-002.png
 button_name: 자세히 보기
