--- a/content/learning-and-research/papers/ko/국문-업데이트-준비-중.md
+++ b/content/learning-and-research/papers/ko/국문-업데이트-준비-중.md
@@ -1,8 +1,34 @@
 ---
-title: "[국문] 업데이트 준비 중"
+title: "[국문] 연구자료"
 author: 연구팀
 date: 2022-01-28T09:15:08.438Z
 image: /img/001.png
 home_sticky: false
 ---
-국문 연구자료 업데이트 준비 중입니다
+**안내**
+
+* [LINK](https://docs.google.com/spreadsheets/d/1PZaSCGtruGFhylxCH38QUk--QQ9S968WgTnlXZy8bFg/edit#gid=0)
+
+
+
+* LINK
+
+**논**
+
+* [LINK](https://docs.google.com/spreadsheets/d/1PZaSCGtruGFhylxCH38QUk--QQ9S968WgTnlXZy8bFg/edit#gid=387258232)
+
+**자료**
+
+* [LINK](https://docs.google.com/spreadsheets/d/1PZaSCGtruGFhylxCH38QUk--QQ9S968WgTnlXZy8bFg/edit#gid=533569577)
+
+**보고**
+
+* [LINK](https://docs.google.com/spreadsheets/d/1PZaSCGtruGFhylxCH38QUk--QQ9S968WgTnlXZy8bFg/edit#gid=1389087427)
+
+**영상**
+
+* [LINK](https://docs.google.com/spreadsheets/d/1PZaSCGtruGFhylxCH38QUk--QQ9S968WgTnlXZy8bFg/edit#gid=296714614)
+
+**아카이브**
+
+* [LINK](https://docs.google.com/spreadsheets/d/1PZaSCGtruGFhylxCH38QUk--QQ9S968WgTnlXZy8bFg/edit#gid=1382855321)
