Update 연구자료(국문) “국문-업데이트-준비-중”

--- a/content/learning-and-research/papers/ko/국문-업데이트-준비-중.md
+++ b/content/learning-and-research/papers/ko/국문-업데이트-준비-중.md
@@ -5,14 +5,24 @@ date: 2022-01-28T09:15:08.438Z
 image: /img/001.png
 home_sticky: false
 ---
-##### **● 안내 ▷** [LINK](https://docs.google.com/spreadsheets/d/1PZaSCGtruGFhylxCH38QUk--QQ9S968WgTnlXZy8bFg/edit#gid=0)
+##### **안내 ▷** [LINK](https://docs.google.com/spreadsheets/d/1PZaSCGtruGFhylxCH38QUk--QQ9S968WgTnlXZy8bFg/edit#gid=0)
 
-##### **● 논문 ▷** [LINK](https://docs.google.com/spreadsheets/d/1PZaSCGtruGFhylxCH38QUk--QQ9S968WgTnlXZy8bFg/edit#gid=387258232)
 
-##### **● 자료 ▷** [LINK](https://docs.google.com/spreadsheets/d/1PZaSCGtruGFhylxCH38QUk--QQ9S968WgTnlXZy8bFg/edit#gid=533569577)
 
-##### **● 보고 ▷** [LINK](https://docs.google.com/spreadsheets/d/1PZaSCGtruGFhylxCH38QUk--QQ9S968WgTnlXZy8bFg/edit#gid=1389087427)
+##### **논문 ▷** [LINK](https://docs.google.com/spreadsheets/d/1PZaSCGtruGFhylxCH38QUk--QQ9S968WgTnlXZy8bFg/edit#gid=387258232)
 
-##### **● 영상 ▷** [LINK](https://docs.google.com/spreadsheets/d/1PZaSCGtruGFhylxCH38QUk--QQ9S968WgTnlXZy8bFg/edit#gid=296714614)
 
-##### **● 아카이브 ▷** [LINK](https://docs.google.com/spreadsheets/d/1PZaSCGtruGFhylxCH38QUk--QQ9S968WgTnlXZy8bFg/edit#gid=1382855321)
+
+##### **자료 ▷** [LINK](https://docs.google.com/spreadsheets/d/1PZaSCGtruGFhylxCH38QUk--QQ9S968WgTnlXZy8bFg/edit#gid=533569577)
+
+
+
+##### **보고 ▷** [LINK](https://docs.google.com/spreadsheets/d/1PZaSCGtruGFhylxCH38QUk--QQ9S968WgTnlXZy8bFg/edit#gid=1389087427)
+
+
+
+##### **영상 ▷** [LINK](https://docs.google.com/spreadsheets/d/1PZaSCGtruGFhylxCH38QUk--QQ9S968WgTnlXZy8bFg/edit#gid=296714614)
+
+
+
+##### **아카이브 ▷** [LINK](https://docs.google.com/spreadsheets/d/1PZaSCGtruGFhylxCH38QUk--QQ9S968WgTnlXZy8bFg/edit#gid=1382855321)
