Update 프로그램 “전쟁과여성인권박물관-개관-10주년-기념-시민강좌-〈수요페미클럽-일본군위안부-문제-다시-보기〉”

--- a/content/learning-and-research/programs/전쟁과여성인권박물관-개관-10주년-기념-시민강좌-〈수요페미클럽-일본군위안부-문제-다시-보기〉.md
+++ b/content/learning-and-research/programs/전쟁과여성인권박물관-개관-10주년-기념-시민강좌-〈수요페미클럽-일본군위안부-문제-다시-보기〉.md
@@ -9,9 +9,9 @@ program_member: 제한 없음
 program_contact: museum@womenandwar.net
 apply_link: https://docs.google.com/forms/d/e/1FAIpQLSeV3snhVJZL_MdPWy2xkQQCgUH39AvkhihrGAccmqa2OkIIDQ/viewform
 image: /img/박물관-10주년-시민강좌_복사본-001.png
-home_sticky: true
+home_sticky: false
 always: false
-pinned: true
+pinned: false
 invisible: false
 ---
 **전쟁과여성인권박물관 개관 10주년 기념 시민강좌
