Update 프로그램 “차근차근-일본군성노예제-문제-알아보기-온라인-교육”

--- a/content/learning-and-research/programs/차근차근-일본군성노예제-문제-알아보기-온라인-교육.md
+++ b/content/learning-and-research/programs/차근차근-일본군성노예제-문제-알아보기-온라인-교육.md
@@ -10,7 +10,7 @@ program_member: 제한 없음
 program_contact: 02-392-5252
 apply_link: https://womenandwarmuseum.net/learning-and-research/e-learning/
 image: /img/화면-캡처-2022-02-14-115722.png
-home_sticky: false
+home_sticky: true
 always: true
 pinned: false
 invisible: false
