Update 공지사항 “전쟁과여성인권박물관-10주년-기념사업”

--- a/content/connect/notice/전쟁과여성인권박물관-10주년-기념사업.md
+++ b/content/connect/notice/전쟁과여성인권박물관-10주년-기념사업.md
@@ -4,7 +4,7 @@ author: 전쟁과여성인권박물관
 date: 2022-04-21T05:35:09.748Z
 summary: 기념식&라운드테이블 | 기념전시&참여마당 | 시민강좌 | 후원자 대상 행사
 image: /img/웹자보-10주년-기념-행사-전체_최종-001.png
-home_sticky: true
+home_sticky: false
 pinned: false
 ---
 ####  전쟁과여성인권박물관 10주년 기념 행사 
