Update 공지사항 “전쟁과여성인권박물관-2022년-하반기-자원활동가-모집-안내-~6-21”

--- a/content/connect/notice/전쟁과여성인권박물관-2022년-하반기-자원활동가-모집-안내-~6-21.md
+++ b/content/connect/notice/전쟁과여성인권박물관-2022년-하반기-자원활동가-모집-안내-~6-21.md
@@ -6,14 +6,12 @@ image: /img/2022하반기-자원활동가-1.jpg
 home_sticky: true
 pinned: false
 ---
-
-
 ![](/img/2022하반기-자원활동가-2.jpg)
 
 모집일시 : 2022년 5월 25일(수) - 6월 21일(화)
 세부내용 
 
- 1. 활동일시 
+1. 활동일시 
 
 * 기간 : 2022년 6월 28일(화)- 12월 31일(토)
 * 매주(화-토)      오전조 : 10:00-13:00(3시간)
@@ -36,9 +34,9 @@ pinned: false
 
 \    2) 샵 판매 업무 
 
-\- 박물관 샵 물품 숙지 및 판매 업무
+\-  박물관 샵 물품 숙지 및 판매 업무
 
-\    3)기타 박물관 운영에 필요한 업무지원
+\    3) 기타 박물관 운영에 필요한 업무지원
   나. 기록관리 업무 
 
 \    1) 기록물 목록화 작업(정리, 기술)
@@ -64,7 +62,7 @@ pinned: false
 
 6. 지원방법
 
-* 자원활동 지원서 작성하여 이메일로 제출
+* 자원활동 지원서 작성하여 이메일로 제출 (지원서 다운로드 → <https://bit.ly/3wYzwEy>)
 * 이메일 : museum@womenandwar.net
 
 문의전화 : 전쟁과여성인권박물관 02-393-5252
