--- a/content/connect/notice/전쟁과여성인권박물관-2022년-하반기-자원활동가-모집-안내-~6-21.md
+++ b/content/connect/notice/전쟁과여성인권박물관-2022년-하반기-자원활동가-모집-안내-~6-21.md
@@ -2,27 +2,29 @@
 title: 전쟁과여성인권박물관 2022년 하반기 자원활동가 모집 안내(~6/21)
 author: 전쟁과여성인권박물관
 date: 2022-05-30T01:51:52.330Z
-image: /img/2022하반기-자원활동가-1.jpg
+image: ""
 home_sticky: true
 pinned: false
 ---
+![](/img/2022하반기-자원활동가-1.jpg)
+
 ![](/img/2022하반기-자원활동가-2.jpg)
 
-모집일시 : 2022년 5월 25일(수) - 6월 21일(화)
-세부내용 
+\* 모집일시 : 2022년 5월 25일(수) - 6월 21일(화)
+\* 세부내용 
 
-1. 활동일시 
+1.활동일시 
 
 * 기간 : 2022년 6월 28일(화)- 12월 31일(토)
 * 매주(화-토)      오전조 : 10:00-13:00(3시간)
   오후조 : 14:00-18:00(4시간) 
 
-2. 활동 사전 교육 – 교육은 반드시 1회 참석요망
+2.활동 사전 교육 – 교육은 반드시 1회 참석요망
 
 * 일시 (1차) 2022년 6월 23일(목) 오전 11시          (2차) 2022년 6월 25일(토) 오전 11시
 * 장소 : 전쟁과여성인권박물관 
 
-3. 활동내용   
+3.활동내용   
 
   가. 인포센터 업무
 
@@ -50,17 +52,17 @@ pinned: false
 
 \    3) 정의연 활동 지원
 
-4. 활동인증
+4.활동인증
 
 * 1365 자원봉사포털에 봉사시간 입력
 
-5. 자격요건
+5.자격요건
 
 * 일본군 ‘위안부’ 문제에 대하여 관심이 있는 사람
 * 화-토 주1회(3시간 이상) 자원활동 가능한 사람        
 * 만 18세 이상 누구나 
 
-6. 지원방법
+6.지원방법
 
 * 자원활동 지원서 작성하여 이메일로 제출 (지원서 다운로드 → <https://bit.ly/3wYzwEy>)
 * 이메일 : museum@womenandwar.net
