Update 공지사항 “전쟁과여성인권박물관-2022년-하반기-자원활동가-모집-안내-~6-21”

--- a/content/connect/notice/전쟁과여성인권박물관-2022년-하반기-자원활동가-모집-안내-~6-21.md
+++ b/content/connect/notice/전쟁과여성인권박물관-2022년-하반기-자원활동가-모집-안내-~6-21.md
@@ -1,89 +1,29 @@
 ---
-title: 전쟁과여성인권박물관 2022년 하반기 자원활동가 모집 안내(~6/21)
+title: 전쟁과여성인권박물관 2022년 하반기 자원활동가 모집 안내(~6/30)
 author: 전쟁과여성인권박물관
 date: 2022-05-30T01:51:52.330Z
 image: ""
 home_sticky: true
 pinned: false
 ---
-![](/img/2022하반기-자원활동가-1.jpg)
-
-![](/img/2022하반기-자원활동가-2.jpg)
-
-
-
-**전쟁과여성인권박물관 2022년 하반기 자원활동가 모집 안내**
-
-모집일시 : 2022년 5월 25일(수) - 6월 21일(화)
-
-세부내용
-
-1. 활동일시
-
-\- 기간 : 2022년 6월 28일(화)- 12월 31일(토)
-
-\- 매주(화-토) 오전조 : 10:00-13:00(3시간)
-
-\    오후조 : 14:00-18:00(4시간)
-
-2. 활동 사전 교육 – 교육은 반드시 1회 참석요망
-
-\- 일시 (1차) 2022년 6월 23일(목) 오전 11시
-
-\    (2차) 2022년 6월 25일(토) 오전 11시
-
-\- 장소 : 전쟁과여성인권박물관
-
-3. 활동내용
-
- 가. 인포센터 업무
-
-   1) 인포센터 업무
-
-\- 관람 티켓판매 및 관람방법 안내
-
-\- 전시실 관람공간 안내 및 질서유지 업무
-
-   2) 샵 판매 업무
-
-\- 박물관 샵 물품 숙지 및 판매 업무
-
-   3) 기타 박물관 운영에 필요한 업무지원
-
-  나. 기록관리 업무
-
-   1) 기록물 목록화 작업(정리, 기술)
-
-   2) 문서, 사진 스캐닝
-
-다. 업무 지원
-
-   1) 후원물품(나비팔찌) 제작
-
-   2) 박물관 전시실 홍보 자료 제작
-
-   3) 정의연 활동 지원
-
-4. 활동인증
-
-\- 1365 자원봉사포털에 봉사시간 입력
-
-5. 자격요건
-
-\- 일본군 ‘위안부’ 문제에 대하여 관심이 있는 사람
-
-\- 화-토 주1회(3시간 이상) 자원활동 가능한 사람
-
-\- 만 18세 이상 누구나
-
-6. 지원방법
-
-\- 자원활동 지원서 작성하여 이메일로 제출
-
- (지원서 다운로드 [https://bit.ly/3wYzwEy](https://bit.ly/3wYzwEy?fbclid=IwAR0AXUMrGR8A79G3SyqD5NhmmxQIW5SwHA3femwygR1Q_0Doaj51EtI-ihE))
-
-\- 이메일 : museum@womenandwar.net
-
-
-
-문의전화 : 전쟁과여성인권박물관 02-393-5252
+1. 집일시 : 2022년 5월 25일(수) ~ 2022년 6월 30일(목)
+2. 활동기간: 2022년 7월 5일(화) ~ 12월 31일(토) 주 1회\
+   - 요일: 화~토요일 중 선택\
+   - 시간: 오전(10:00\~13:00) 또는 오후(14:00\~18:00) 중 선
+3. 활동내용\
+   - 인포센터 업무: 관람객 응대 및 관람방법 안내, 티켓 발권, 뮤지엄샵 운영\
+   - 기록관리 업무:  기록물 목록화(정리, 기술), 문서/사진 스캐닝, 도서 정리\
+   - 기타 박물관 운영에 필요한 업무
+4. 사전교육 (1회 필참)\
+   - 일시: 2022년 6월 25일(토) 오전 11시 또는 2022년 7월 2일(토) 오전 11시\
+   - 장소 : 전쟁과여성인권박물관
+5. 지원사항\
+   - 활동시간 내 중식 제공(전일활동가에 한함)\
+   - 요청 시 자원활동확인서 발급, 1365자원봉사포털 실적 등록
+6. 자격요건\
+   - 일본군‘위안부’ 문제 해결에 관심이 있는 분\
+   - 화~토 주 1회(3시간 이상) 활동 가능한 분       \
+   - 만 18세 이상 누구나
+7. 신청방법: 홈페이지 내 <자원활동신청> 페이지에서  신청 (* 이름 작성란에 소속을 함 기입해 주세요)\
+   >> https://womenandwarmuseum.net/connect/volunteer
+8. 문의: 전쟁과여성인권박물관 02-392-5252
