Update 공지사항 “전쟁과여성인권박물관-2022년-하반기-자원활동가-모집-안내-~6-21”

--- a/content/connect/notice/전쟁과여성인권박물관-2022년-하반기-자원활동가-모집-안내-~6-21.md
+++ b/content/connect/notice/전쟁과여성인권박물관-2022년-하반기-자원활동가-모집-안내-~6-21.md
@@ -6,24 +6,44 @@ image: ""
 home_sticky: true
 pinned: false
 ---
-1. 집일시 : 2022년 5월 25일(수) ~ 2022년 6월 30일(목)
-2. 활동기간: 2022년 7월 5일(화) ~ 12월 31일(토) 주 1회\
-   - 요일: 화~토요일 중 선택\
-   - 시간: 오전(10:00\~13:00) 또는 오후(14:00\~18:00) 중 선
-3. 활동내용\
-   - 인포센터 업무: 관람객 응대 및 관람방법 안내, 티켓 발권, 뮤지엄샵 운영\
-   - 기록관리 업무:  기록물 목록화(정리, 기술), 문서/사진 스캐닝, 도서 정리\
-   - 기타 박물관 운영에 필요한 업무
-4. 사전교육 (1회 필참)\
-   - 일시: 2022년 6월 25일(토) 오전 11시 또는 2022년 7월 2일(토) 오전 11시\
-   - 장소 : 전쟁과여성인권박물관
-5. 지원사항\
-   - 활동시간 내 중식 제공(전일활동가에 한함)\
-   - 요청 시 자원활동확인서 발급, 1365자원봉사포털 실적 등록
-6. 자격요건\
-   - 일본군‘위안부’ 문제 해결에 관심이 있는 분\
-   - 화~토 주 1회(3시간 이상) 활동 가능한 분       \
-   - 만 18세 이상 누구나
-7. 신청방법: 홈페이지 내 <자원활동신청> 페이지에서  신청 (* 이름 작성란에 소속을 함 기입해 주세요)\
-   >> https://womenandwarmuseum.net/connect/volunteer
+1. 모집일시: 2022년 5월 25일(수) ~ 2022년 6월 30일(목)
+
+2. 활동기간: 2022년 7월 5일(화) ~ 12월 31일(토) 주 1회
+
+\- 요일: 화~토요일 중 선택
+
+\- 시간: 오전(10:00\~13:00) 또는 오후(14:00\~18:00) 중 선
+
+3. 활동내용
+
+\- 인포센터 업무: 관람객 응대 및 관람방법 안내, 티켓 발권, 뮤지엄샵 운영\
+
+\- 기록관리 업무:  기록물 목록화(정리, 기술), 문서/사진 스캐닝, 도서 정리\
+
+\- 기타 박물관 운영에 필요한 업무
+
+4. 사전교육 (1회 필참)
+
+\- 일시: 2022년 6월 25일(토) 오전 11시 또는 2022년 7월 2일(토) 오전 11시\
+
+\- 장소 : 전쟁과여성인권박물관
+
+5. 지원사항
+
+\- 활동시간 내 중식 제공(전일활동가에 한함)\
+
+\- 요청 시 자원활동확인서 발급, 1365자원봉사포털 실적 등록
+
+6. 자격요건
+
+\- 일본군‘위안부’ 문제 해결에 관심이 있는 분
+
+\-  주 1회, 하루 3시간 이상 활동 가능한 분       
+
+\- 만 18세 이상 누구나
+
+7. 신청방법: 홈페이지 내 <자원활동신청> 페이지에서  신청 (* 이름 작성란에 소속을 함 기입해 주세요) >>
+
+https://womenandwarmuseum.net/connect/volunteer
+
 8. 문의: 전쟁과여성인권박물관 02-392-5252
