Update 공지사항 “전쟁과여성인권박물관-2022년-하반기-자원활동가-모집-안내-~6-21”

--- a/content/connect/notice/전쟁과여성인권박물관-2022년-하반기-자원활동가-모집-안내-~6-21.md
+++ b/content/connect/notice/전쟁과여성인권박물관-2022년-하반기-자원활동가-모집-안내-~6-21.md
@@ -16,21 +16,21 @@ pinned: false
 
 3. 활동내용
 
-\- 인포센터 업무: 관람객 응대 및 관람방법 안내, 티켓 발권, 뮤지엄샵 운영\
+\- 인포센터 업무: 관람객 응대 및 관람방법 안내, 티켓 발권, 뮤지엄샵 운영
 
-\- 기록관리 업무:  기록물 목록화(정리, 기술), 문서/사진 스캐닝, 도서 정리\
+\- 기록관리 업무:  기록물 목록화(정리, 기술), 문서/사진 스캐닝, 도서 정리
 
 \- 기타 박물관 운영에 필요한 업무
 
 4. 사전교육 (1회 필참)
 
-\- 일시: 2022년 6월 25일(토) 오전 11시 또는 2022년 7월 2일(토) 오전 11시\
+\- 일시: 2022년 6월 25일(토) 오전 11시 또는 2022년 7월 2일(토) 오전 11시
 
 \- 장소 : 전쟁과여성인권박물관
 
 5. 지원사항
 
-\- 활동시간 내 중식 제공(전일활동가에 한함)\
+\- 활동시간 내 중식 제공(전일활동가에 한함)
 
 \- 요청 시 자원활동확인서 발급, 1365자원봉사포털 실적 등록
 
