Update 공지사항 “전쟁과여성인권박물관-2022년-하반기-자원활동가-모집-안내-~6-21”

--- a/content/connect/notice/전쟁과여성인권박물관-2022년-하반기-자원활동가-모집-안내-~6-21.md
+++ b/content/connect/notice/전쟁과여성인권박물관-2022년-하반기-자원활동가-모집-안내-~6-21.md
@@ -6,13 +6,15 @@ image: ""
 home_sticky: true
 pinned: false
 ---
-1. **모집일시**: 2022년 5월 25일(수) ~ 2022년 6월 30일(목)
+![](/img/홈페이지용.jpg)
+
+1. **모집**: 2022년 5월 25일(수) ~ 2022년 6월 30일(목)
 
 2. **활동기간**: 2022년 7월 5일(화) ~ 12월 31일(토) 주 1회
 
 \- 요일: 화~토요일 중 선택
 
-\- 시간: 오전(10:00\~13:00) 또는 오후(14:00\~18:00) 중 선
+\- 시간: 오전(10:00\~13:00) 또는 오후(14:00\~18:00) 또는 전일 중 선
 
 3. **활동내용**
 
