Update 프로그램 “보드랍게-특별상영회-무료”

--- a/content/learning-and-research/programs/보드랍게-특별상영회-무료.md
+++ b/content/learning-and-research/programs/보드랍게-특별상영회-무료.md
@@ -1,8 +1,12 @@
 ---
 title: <보드랍게> 특별상영회(무료)
+author: 전쟁과여성인권박물관
 summary: 제10차 세계일본군'위안부'기림일 특별상영회 영화 <보드랍게> GV 신청
 date: 2022-07-26T01:32:27.115Z
+application_end_date: ~8/10
 program_target: 누구나
+program_member: 선착순 200명
+program_contact: 02-365-4016
 apply_link: bit.ly/보드랍게신청
 image: /img/웹자보-220722_기림일_보드랍게-홍보.jpg
 home_sticky: false
@@ -21,8 +25,14 @@ invisible: false
 ○ 초청: 박문칠 감독\
 ○ 대상: 제10차 세계일본군'위안부'기림일에 함께하고자 하는 누구나
 
+8월 11일에는 최근 개봉하여 큰 화제가 되었던 **영화 <보드랍게> 상영회**가 있습니다. 박문칠 감독과의 대화도 마련하였답니다! 많은 참여를 부탁드립니다
 
 
-8월 14일 청계광장에서 진행될 제10차 세계일본군’위안부’기림일 기념 나비문화제는 다채로운 공연과 여러 부스들로 구성되어 있습니다. 연대의 마음을 담아 공연 관람도 하시고, 준비된 부스들에 참여하셔서 ‘기림일’의 의미를 다시 한 번 생각해보는 기회가 되길 바랍니다!
 
-또한 11일에는 최근 개봉하여 큰 화제가 되었던 **영화 <보드랍게> 상영회**가 있습니다. 박문칠 감독과의 대화도 마련하였답니다! 많은 참여를 부탁드립니다!
+\-
+
+그리고 8월 14일 청계광장에서 진행될 제10차 세계일본군’위안부’기림일 기념 나비문화제는 다채로운 공연과 여러 부스들로 구성되어 있습니다. 연대의 마음을 담아 공연 관람도 하시고, 준비된 부스들에 참여하셔서 ‘기림일’의 의미를 다시 한 번 생각해보는 기회가 되길 바랍니다!
+
+10차 나비문화제 자세히 알아보기>>
+
+<https://womenandwar.net/kr/제10차-세계일본군위안부기림일-기념-정의기억/>
