Update 프로그램 “제10차-세계일본군’위안부’기림일-기념-정의기억연대-행사-안내”

--- a/content/learning-and-research/programs/제10차-세계일본군’위안부’기림일-기념-정의기억연대-행사-안내.md
+++ b/content/learning-and-research/programs/제10차-세계일본군’위안부’기림일-기념-정의기억연대-행사-안내.md
@@ -12,7 +12,7 @@ program_member: "-"
 program_contact: 02-365-4016
 apply_link: 현장 접수
 image: /img/웹자보-220722_기림일-전체.jpg
-home_sticky: true
+home_sticky: false
 always: false
 pinned: false
 invisible: false
