Update 프로그램 “보드랍게-특별상영회-무료”

--- a/content/learning-and-research/programs/보드랍게-특별상영회-무료.md
+++ b/content/learning-and-research/programs/보드랍게-특별상영회-무료.md
@@ -9,7 +9,7 @@ program_member: 선착순 200명
 program_contact: 02-365-4016
 apply_link: bit.ly/보드랍게신청
 image: /img/웹자보-220722_기림일_보드랍게-홍보.jpg
-home_sticky: true
+home_sticky: false
 always: false
 pinned: false
 invisible: false
