Update 프로그램 “제10차-세계일본군위안부기림일-나비문화제”

--- a/content/learning-and-research/programs/제10차-세계일본군위안부기림일-나비문화제.md
+++ b/content/learning-and-research/programs/제10차-세계일본군위안부기림일-나비문화제.md
@@ -8,7 +8,7 @@ program_member: 제한없음
 program_contact: 02-365-4016
 apply_link: 청계천 예금보험공사 앞
 image: /img/웹자보-220722_기림일-나비문화제.jpg
-home_sticky: true
+home_sticky: false
 always: false
 pinned: false
 invisible: false
