Update 연구자료(영문) “1”

--- a/content/learning-and-research/papers/en/1.md
+++ b/content/learning-and-research/papers/en/1.md
@@ -8,22 +8,16 @@ paper_materials: ""
 ---
 **NOTICE ▷** [LINK](https://docs.google.com/spreadsheets/d/1mFfRsEkUBMXXL9SjVxxJDamgU3XbcRGHcCmZkrKBKA4/edit?pli=1#gid=0)
 
-
-
-**International Organizations ▷** [LINK](https://docs.google.com/spreadsheets/d/1mFfRsEkUBMXXL9SjVxxJDamgU3XbcRGHcCmZkrKBKA4/edit?pli=1#gid=1182594187)
-
-
-
 **Books ▷** [LINK](https://docs.google.com/spreadsheets/d/1mFfRsEkUBMXXL9SjVxxJDamgU3XbcRGHcCmZkrKBKA4/edit?pli=1#gid=689913543)
-
-
 
 **Journal Articles ▷**[LINK](https://docs.google.com/spreadsheets/d/1mFfRsEkUBMXXL9SjVxxJDamgU3XbcRGHcCmZkrKBKA4/edit?pli=1#gid=1619668511)
 
+**Dissertations ▷**[LINK](https://docs.google.com/spreadsheets/d/1mFfRsEkUBMXXL9SjVxxJDamgU3XbcRGHcCmZkrKBKA4/edit?pli=1#gid=2136796716)
 
+**Conference Proceedings ▷**[LINK](https://docs.google.com/spreadsheets/d/1mFfRsEkUBMXXL9SjVxxJDamgU3XbcRGHcCmZkrKBKA4/edit?pli=1#gid=1050572927)
 
-**Archives ▷**[LINK](https://docs.google.com/spreadsheets/d/1mFfRsEkUBMXXL9SjVxxJDamgU3XbcRGHcCmZkrKBKA4/edit?pli=1#gid=1089710560)
-
-
+**Reports ▷** [LINK](https://docs.google.com/spreadsheets/d/1mFfRsEkUBMXXL9SjVxxJDamgU3XbcRGHcCmZkrKBKA4/edit?pli=1#gid=1182594187)
 
 **Films & Videos ▷** [LINK](https://docs.google.com/spreadsheets/d/1mFfRsEkUBMXXL9SjVxxJDamgU3XbcRGHcCmZkrKBKA4/edit?pli=1#gid=795264717)
+
+**Archives ▷**[LINK](https://docs.google.com/spreadsheets/d/1mFfRsEkUBMXXL9SjVxxJDamgU3XbcRGHcCmZkrKBKA4/edit?pli=1#gid=1089710560)
