Update 공지사항 “박물관-추석연휴-휴관-안내”

--- a/content/connect/notice/박물관-추석연휴-휴관-안내.md
+++ b/content/connect/notice/박물관-추석연휴-휴관-안내.md
@@ -3,8 +3,8 @@ title: 박물관 추석연휴 휴관 안내
 author: 전쟁과여성인권박물관
 date: 2022-09-08T07:12:45.417Z
 image: /img/추석연휴-휴관안내1.png
-home_sticky: true
-pinned: true
+home_sticky: false
+pinned: false
 ---
 추석연휴를 맞이하여 휴관합니다. 관람에 참고 부탁드립니다.
 
