Update 공지사항 “2022년-상반기-수입-지출-내역”

--- a/content/connect/notice/2022년-상반기-수입-지출-내역.md
+++ b/content/connect/notice/2022년-상반기-수입-지출-내역.md
@@ -3,6 +3,6 @@ title: 2022년 상반기 수입 지출 내역
 author: 수선
 date: 2022-09-30T08:55:00.247Z
 home_sticky: true
-pinned: true
+pinned: false
 ---
 ![](/img/2022년-박물관-상반기-수입-지출내역.jpg)
