Update 공지사항 “2022-정의기억연대-후원의-밤에-초대합니다”

--- a/content/connect/notice/2022-정의기억연대-후원의-밤에-초대합니다.md
+++ b/content/connect/notice/2022-정의기억연대-후원의-밤에-초대합니다.md
@@ -3,7 +3,7 @@ title: 2022 정의기억연대 후원의 밤에 초대합니다.
 author: 전쟁과여성인권박물관
 date: 2022-10-25T06:57:49.397Z
 image: /img/포스터-최종.jpg
-home_sticky: false
+home_sticky: true
 pinned: false
 ---
 🙏 2022 정의기억연대 후원의 밤에 초대합니다.
