Update 공지사항 “2022-정의기억연대-후원의-밤에-초대합니다”

--- a/content/connect/notice/2022-정의기억연대-후원의-밤에-초대합니다.md
+++ b/content/connect/notice/2022-정의기억연대-후원의-밤에-초대합니다.md
@@ -6,10 +6,10 @@ image: <https://online.mrm.or.kr/GUDO4Hm>
 home_sticky: true
 pinned: false
 ---
-🙏 2022 정의기억연대 후원의 밤에 초대합니다.
+🙏 **2022 정의기억연대 후원의 밤에 초대합니다.**
 
-\-일시: 2022.11.16. (수) 19:00
--장소: 하이서울유스호스텔 대강당 B1(서울 영등포구 영신로 200)
+**\-일시: 2022.11.16. (수) 19:00
+-장소: 하이서울유스호스텔 대강당 B1(서울 영등포구 영신로 200)**
 
 일본군성노예 문제 해결을 위해 달려 온 지 32년이 되었습니다. 
 
@@ -21,4 +21,4 @@ pinned: false
 
 정의기억연대 활동가 일동
 
-후원하기: <https://online.mrm.or.kr/GUDO4Hm>
+**후원하기: <https://online.mrm.or.kr/GUDO4Hm>**
