--- a/content/connect/notice/2022-정의기억연대-후원의-밤에-초대합니다.md
+++ b/content/connect/notice/2022-정의기억연대-후원의-밤에-초대합니다.md
@@ -2,7 +2,7 @@
 title: 2022 정의기억연대 후원의 밤에 초대합니다.
 author: 전쟁과여성인권박물관
 date: 2022-10-25T07:48:44.093Z
-image: <https://online.mrm.or.kr/GUDO4Hm>
+image: /img/포스터-최종.jpg
 home_sticky: true
 pinned: false
 ---
