Update 공지사항 “2022-정의기억연대-후원의-밤에-초대합니다”

--- a/content/connect/notice/2022-정의기억연대-후원의-밤에-초대합니다.md
+++ b/content/connect/notice/2022-정의기억연대-후원의-밤에-초대합니다.md
@@ -2,11 +2,13 @@
 title: 2022 정의기억연대 후원의 밤에 초대합니다.
 author: 전쟁과여성인권박물관
 date: 2022-10-25T07:48:44.093Z
-image: /img/포스터-최종.jpg
+image: ""
 home_sticky: true
 pinned: false
 ---
 🙏 **2022 정의기억연대 후원의 밤에 초대합니다.**
+
+![](/img/포스터-최종.jpg)
 
 **\-일시: 2022.11.16. (수) 19:00**
 
