Update 뮤지엄샵 “김복동할머니 굿즈15(김고은 촬영)”

--- a/content/guide/stores/김복동할머니 굿즈15(김고은 촬영).md
+++ b/content/guide/stores/김복동할머니 굿즈15(김고은 촬영).md
@@ -1,20 +1,20 @@
 ---
-reference_code:
-media_type:
-title: 목련 포스트잇
-summary:
-image:
-description:
-modified_at:
-created_at:
+reference_code: null
+price: 3000원
+summary: null
+modified_at: null
+created_at: null
 featured: https://r2.womenandwarmuseum.net/stores/목련%20포스트잇/김복동할머니%20굿즈15(김고은%20촬영).JPG
-price: 3,000원
-buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
+media_type: null
+title: 목련 포스트잇
 components:
-- https://r2.womenandwarmuseum.net/stores/목련%20포스트잇/김복동할머니%20굿즈15(김고은%20촬영).JPG
-- https://r2.womenandwarmuseum.net/stores/목련%20포스트잇/김복동할머니%20굿즈16(김고은%20촬영).JPG
+  - https://r2.womenandwarmuseum.net/stores/목련%20포스트잇/김복동할머니%20굿즈15(김고은%20촬영).JPG
+  - https://r2.womenandwarmuseum.net/stores/목련%20포스트잇/김복동할머니%20굿즈16(김고은%20촬영).JPG
 tags:
--
+  - null
+image: null
+description: null
+buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
 ---
 **여성인권운동가 김복동 추모와 기억전 특별전시 굿즈입니다**
 
