--- a/content/connect/notice/2022-기부금-영수증-발급-안내.md
+++ b/content/connect/notice/2022-기부금-영수증-발급-안내.md
@@ -2,21 +2,32 @@
 title: 2022 기부금 영수증 발급 안내
 author: 관리자
 date: 2022-12-16T01:14:43.743Z
-home_sticky: true
+home_sticky: false
 pinned: false
 ---
 
 
 ![](/img/e1.2_기부금-발급-안내-5-_이미지_연대운동국_백지윤_221215_최종_한시.png)
 
-![](/img/e1.2_기부금-발급-안내-2-_이미지_연대운동국_백지윤_221215_최종_한시.png)
+
+
+![https://bit.ly/3V3dSsK](/img/e1.2_기부금-발급-안내-2-_이미지_연대운동국_백지윤_221215_최종_한시.png)
+
+<https://bit.ly/3V3dSsK>
 
 ![](/img/e1.2_기부금-발급-안내-3-_이미지_연대운동국_백지윤_221215_최종_한시.png)
 
-![](/img/e1.2_기부금-발급-안내-4-_이미지_연대운동국_백지윤_221215_최종_한시.png)
+
+
+![https://bit.ly/3V3dSsK](/img/e1.2_기부금-발급-안내-4-_이미지_연대운동국_백지윤_221215_최종_한시.png)
+
+<https://bit.ly/3V3dSsK>
+
+
 
 \* 주민등록번호(13자리)를 기입한 분은 국세청을 통해 영수증이 자동 발급됩니다.\
+
 * 환경보호를 위해 온라인 발급을 권장하고 있으니 종이영수증이 꼭 필요한 경우 아래 사무처로 연락주시기 바랍니다.\
-**\***일시후원으로 계좌이체하시고 개인정보를 제공하지 않으신 후원회원님께서는 아래 사무처로 연락해 주시기 바랍니다.\
-\
-■ 문의 : 사무처 운영관리국 02-332-1228 | tax@womenandwar.net
+  **\***일시후원으로 계좌이체하시고 개인정보를 제공하지 않으신 후원회원님께서는 아래 사무처로 연락해 주시기 바랍니다.\
+  \
+  ■ 문의 : 사무처 운영관리국 02-332-1228 | tax@womenandwar.net
