Update 공지사항 “2022-기부금-영수증-발급-안내”

--- a/content/connect/notice/2022-기부금-영수증-발급-안내.md
+++ b/content/connect/notice/2022-기부금-영수증-발급-안내.md
@@ -7,15 +7,17 @@ pinned: false
 ---
 ![](/img/e1.2_기부금-발급-안내-5-_이미지_연대운동국_백지윤_221215_최종_한시.png)
 
-![https://bit.ly/3V3dSsK](/img/221215_기부금영수증발급-003.png)
+![](/img/221215_기부금영수증발급-003.png)
 
 ## <https://bit.ly/3V3dSsK>
 
 ![](/img/e1.2_기부금-발급-안내-3-_이미지_연대운동국_백지윤_221215_최종_한시.png)
 
-![<https://bit.ly/3V3dSsK>](/img/221215_기부금영수증발급-006.png)
+![](/img/221215_기부금영수증발급-006.png)
 
 ## <https://bit.ly/3V3dSsK>
+
+
 
 \* 주민등록번호(13자리)를 기입한 분은 국세청을 통해 영수증이 자동 발급됩니다.\
 
