Update 공지사항 “2022-기부금-영수증-발급-안내”

--- a/content/connect/notice/2022-기부금-영수증-발급-안내.md
+++ b/content/connect/notice/2022-기부금-영수증-발급-안내.md
@@ -5,9 +5,9 @@ date: 2022-12-16T01:14:43.743Z
 home_sticky: false
 pinned: false
 ---
-![](/img/e1.2_기부금-발급-안내-5-_이미지_연대운동국_백지윤_221215_최종_한시.png)
+![](/img/221215_기부금영수증발급-002.png)
 
-![](/img/221215_기부금영수증발급-003.png)
+![](/img/002.png)
 
 # <https://bit.ly/3V3dSsK>
 
@@ -15,9 +15,9 @@ pinned: false
 
 
 
-![](/img/e1.2_기부금-발급-안내-3-_이미지_연대운동국_백지윤_221215_최종_한시.png)
+![](/img/004.png)
 
-![](/img/221215_기부금영수증발급-006.png)
+![](/img/005.png)
 
 # [](https://mrmweb.hsit.co.kr/v2/?server=anSZe1lBpJs/ev/3FiPISw==&action=receipt)<https://mrmweb.hsit.co.kr/v2/?server=anSZe1lBpJs/ev/3FiPISw==&action=receipt>
 
