Update 공지사항 “2022-기부금-영수증-발급-안내”

--- a/content/connect/notice/2022-기부금-영수증-발급-안내.md
+++ b/content/connect/notice/2022-기부금-영수증-발급-안내.md
@@ -2,12 +2,12 @@
 title: 2022 기부금 영수증 발급 안내
 author: 관리자
 date: 2022-12-16T01:14:43.743Z
-home_sticky: false
+home_sticky: true
 pinned: false
 ---
 ![](/img/221215_기부금영수증발급-002.png)
 
-![](/img/002.png)
+![](/img/003.png)
 
 # <https://bit.ly/3V3dSsK>
 
