Update 공지사항 “2023년도-전쟁과여성인권박물관-대학생-sns-기자단-모집-~2023-01-06”

--- a/content/connect/notice/2023년도-전쟁과여성인권박물관-대학생-sns-기자단-모집-~2023-01-06.md
+++ b/content/connect/notice/2023년도-전쟁과여성인권박물관-대학생-sns-기자단-모집-~2023-01-06.md
@@ -6,7 +6,7 @@ image: /img/웹포스터-2023-대학생-sns-기자단-모집-웹자보.jpg
 home_sticky: false
 pinned: true
 ---
-**2023년 전쟁과여성인권박물관 대학생 SNS 기자단 모집**
+<2023년 전쟁과여성인권박물관 대학생 SNS 기자단 모집>
 
 전쟁과여성인권박물관은 일본군’위안부’피해생존자들이 겪었던 역사를 기억하고 교육하며, 일본군 성노예제 문제해결을 위해 활동하는 공간입니다. 지금도 일어나고 있는 전시성폭력 문제에 관심을 가지고 전쟁과 여성폭력 없는 세상을 위해 연대하고 행동하고 있습니다. 약 1년간 함께 일본군 성노예제 및 여성 인권 문제를 고민하고 알려갈 대학생 여러분을 모집합니다.
 
