Update 공지사항 “2023년-상반기-자원활동가-모집”

--- a/content/connect/notice/2023년-상반기-자원활동가-모집.md
+++ b/content/connect/notice/2023년-상반기-자원활동가-모집.md
@@ -2,12 +2,14 @@
 title: 2023년 상반기 자원활동가 모집
 author: 박물관
 date: 2022-12-23T07:49:49.807Z
-image: /img/2023-상반기-자원활동가-모집공고.jpg
+image: /img/2023-상반기-자원활동가-모집공고2.jpg
 home_sticky: false
 pinned: false
 ---
-1. **모집**: 2022년 12월 23일(금) ~ 2023년 1월 6일()
-2. **활동기간**: 2022년 1월 10일(화) ~ 7월 1일(토) 주 1회
+1. **모집**:  1차 2022년 12월 23일(금) ~ 2023년 1월 6일(금) 
+
+   \    2차 2023년 1월 7일(토) ~ 2023년 1월 27일(금) 
+2. **동기간**: 2023년 1월 10일(화) ~ 7월 1일(토) 주 1회
 
 \- 요일: 화~토요일 중 선택   
 
@@ -23,7 +25,8 @@ pinned: false
 
 4. **사전교육** (1회 필참)
 
-\- 일시: 2023년1월 7일(토) 오전 10시 30분 
+\- 일시:  1 2023년1월 7일(토) 오전 10시 30분 \
+ ﻿            2차 2023년1월28일(토) 오전 10시 30분 
 
 \- 장소 : 전쟁과여성인권박물관
 
