Update 공지사항 “이용방법-기록물-열람·이용-안내”

--- a/content/connect/notice/이용방법-기록물-열람·이용-안내.md
+++ b/content/connect/notice/이용방법-기록물-열람·이용-안내.md
@@ -7,7 +7,9 @@ pinned: true
 ---
 \*기록물이용 페이지에 첨부된 기존 신청서식은 접수 받지 않습니다. 아래 새로운 신청서식으로 작성해주세요.
 
-> ## 기록물 열람·이용 안내
+
+
+# \[기록물 열람·이용 안내]
 
 1. **기록물 열람 방법
    가. 방문 열람을 기본으로 함
@@ -15,6 +17,8 @@ pinned: true
    다. 기관이 승인하는 경우에 한해 열람 기록물의 사진 촬영 또는 디지털 사본 제공 가능**
 2. **기록물 이용 방법
    가. 다음의 이용료를 납부하고 디지털 사본 이용**
+
+
 
 *<디지털 사본 이용료 기준>*
 
@@ -33,6 +37,8 @@ pinned: true
 
 *※ 이용목적에 따라 이용료가 감면될 수 있음*
 
+
+
  **나. 이용의 제한
     1) 이용목적 및 방법이 기록물 보존에 유해하거나 기록물의 의미를 훼손할 수 있다고 판단되는 등의 경우 기관은 기록물 이용을 제한할 수 있음
     2) 제공 받은 디지털 사본을 무단으로 재사용하거나 복제, 배포, 온라인 게시하는 행위를 금지함**
@@ -41,4 +47,6 @@ pinned: true
      가. 기록물 열람·이용신청서를 작성하여 서비스 이용일로부터 최소 10일 전까지 이메일로 제출 <이메일: museum@womenandwar.net> 
    나. 업무담당자와 협의 후 담당자의 안내에 따라 서비스 이용**
 
-   ##### **\*신청서 서식 링크**https://drive.google.com/file/d/1SGHlMcV7bbXWbIacoZbjmRrXM76uuDIs/view?usp=sharing
+
+
+##### **\*신청서 서식 링크**https://drive.google.com/file/d/1SGHlMcV7bbXWbIacoZbjmRrXM76uuDIs/view?usp=sharing
