Update 연구자료(일문) “일문-日本語-업데이트-준비-중”

--- a/content/learning-and-research/papers/jp/일문-日本語-업데이트-준비-중.md
+++ b/content/learning-and-research/papers/jp/일문-日本語-업데이트-준비-중.md
@@ -3,7 +3,7 @@ title: "[일문/日本語] 연구자료"
 author: 연구팀
 date: 2022-02-03T05:22:27.296Z
 summary: ""
-image: /img/일어썸네일.jpg
+image: /img/일어.jpg
 paper_materials: ""
 ---
 **ご案内 ▷** [リンク](https://docs.google.com/spreadsheets/d/1BM5f77Vm8W62cA3kw5kqsJHy10yriM5RnjPLGU92bac/edit#gid=0)
