Update 뮤지엄샵 “20211022-플래너_내지컬러_32P_인쇄 (2)_12”

--- a/content/guide/stores/20211022-플래너_내지컬러_32P_인쇄 (2)_12.md
+++ b/content/guide/stores/20211022-플래너_내지컬러_32P_인쇄 (2)_12.md
@@ -1,24 +1,26 @@
 ---
-reference_code:
-media_type:
-title: 2022 스케줄러
-summary:
-image:
-description:
-modified_at:
-created_at:
-featured: https://r2.womenandwarmuseum.net/stores/2022%20스케줄러/박물관%20다이어리.jpg
-price: 10,000원
-buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
+reference_code: null
+price: 1,000원
+summary: 엽서1매 1.000     엽서6매 세트 5,000
+modified_at: null
+created_at: null
+featured: /img/속상해죽겠어요-강덕경-1993-.jpg
+media_type: null
+title: 박물관 개관10주년 기념 엽서(6매)
 components:
-- https://r2.womenandwarmuseum.net/stores/2022%20스케줄러/20211022-플래너_내지컬러_32P_인쇄%20(2)_12.jpg
-- https://r2.womenandwarmuseum.net/stores/2022%20스케줄러/20211022-플래너_내지컬러_32P_인쇄%20(2)_13.jpg
-- https://r2.womenandwarmuseum.net/stores/2022%20스케줄러/20211022-플래너_내지컬러_32P_인쇄%20(2)_2.jpg
-- https://r2.womenandwarmuseum.net/stores/2022%20스케줄러/20211022-플래너_내지컬러_32P_인쇄%20(2)_32.jpg
-- https://r2.womenandwarmuseum.net/stores/2022%20스케줄러/박물관%20다이어리%202.jpg
-- https://r2.womenandwarmuseum.net/stores/2022%20스케줄러/박물관%20다이어리%203.jpg
-- https://r2.womenandwarmuseum.net/stores/2022%20스케줄러/박물관%20다이어리.jpg
+  - https://r2.womenandwarmuseum.net/stores/2022%20스케줄러/20211022-플래너_내지컬러_32P_인쇄%20(2)_12.jpg
+  - https://r2.womenandwarmuseum.net/stores/2022%20스케줄러/20211022-플래너_내지컬러_32P_인쇄%20(2)_13.jpg
+  - https://r2.womenandwarmuseum.net/stores/2022%20스케줄러/20211022-플래너_내지컬러_32P_인쇄%20(2)_2.jpg
+  - https://r2.womenandwarmuseum.net/stores/2022%20스케줄러/20211022-플래너_내지컬러_32P_인쇄%20(2)_32.jpg
+  - /img/깊은산중-기러기떼-강덕경-1993-.jpg
+  - /img/제목-미상-강덕경1993-.jpg
+  - /img/김복동할머니.jpg
+  - /img/김학순-할머니.jpg
+  - /img/황금주할머니.jpg
 tags:
--
+  - null
+image: null
+description: null
+buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
 ---
 판매 수익금은 일본군성노예제문제해결을 위한 국내·외 활동, 수요시위, 교육·장학사업, 피해자지원, 기림사업, 연구 조사, 박무관 운영 사업을 위해 쓰입니다.
