--- a/content/learning-and-research/papers/en/1.md
+++ b/content/learning-and-research/papers/en/1.md
@@ -3,7 +3,7 @@ title: "[영문/ENG] 연구자료"
 author: 연구팀
 date: 2021-08-23T20:36:03+09:00
 summary: ""
-image: /img/002.png
+image: /img/제목을-입력해주세요_-001.jpg
 paper_materials: ""
 ---
 **NOTICE ▷** [LINK](https://docs.google.com/spreadsheets/d/1mFfRsEkUBMXXL9SjVxxJDamgU3XbcRGHcCmZkrKBKA4/edit?pli=1#gid=0)
