Update 연구자료(국문) “국문-업데이트-준비-중”

--- a/content/learning-and-research/papers/ko/국문-업데이트-준비-중.md
+++ b/content/learning-and-research/papers/ko/국문-업데이트-준비-중.md
@@ -2,7 +2,7 @@
 title: "[국문] 연구자료"
 author: 연구팀
 date: 2022-01-28T09:15:08.438Z
-image: /img/001.png
+image: /img/한국어.jpg
 home_sticky: false
 ---
 ##### **안내 ▷** [LINK](https://docs.google.com/spreadsheets/d/1PZaSCGtruGFhylxCH38QUk--QQ9S968WgTnlXZy8bFg/edit#gid=0)
