--- a/content/guide/stores/20211022-플래너_내지컬러_32P_인쇄 (2)_12.md
+++ b/content/guide/stores/20211022-플래너_내지컬러_32P_인쇄 (2)_12.md
@@ -1,20 +1,19 @@
 ---
-reference_code: null
+reference_code:
 price: 1,000원
 summary: 엽서1매 1.000     엽서6매 세트 5,000
-modified_at: null
-created_at: null
-featured: /img/속상해죽겠어요-강덕경-1993-.jpg
-media_type: null
+modified_at: 2023-02-2
+created_at:
+featured: https://r2.womenandwarmuseum.net/stores/박물관개관10주년기념엽서/속상해죽겠어요-강덕경-1993-.jpg
+media_type:
 title: 박물관 개관10주년 기념 엽서(6매)
 components:
-  - /img/깊은산중-기러기떼-강덕경-1993-.jpg
-  - /img/제목-미상-강덕경1993-.jpg
-  - /img/김복동할머니.jpg
-  - /img/김학순-할머니.jpg
-  - /img/황금주할머니.jpg
+- https://r2.womenandwarmuseum.net/stores/박물관개관10주년기념엽서/깊은산중-기러기떼-강덕경-1993-.jpg
+- https://r2.womenandwarmuseum.net/stores/박물관개관10주년기념엽서/제목-미상-강덕경1993-.jpg
+- https://r2.womenandwarmuseum.net/stores/박물관개관10주년기념엽서/김복동할머니.jpg
+- https://r2.womenandwarmuseum.net/stores/박물관개관10주년기념엽서/김학순-할머니.jpg
+- https://r2.womenandwarmuseum.net/stores/박물관개관10주년기념엽서/황금주할머니.jpg
 tags:
-  - null
 image: null
 description: null
 buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
