Update 이달의 기록 “오부치-일본수상-방한에-따른-한일시민연대-결의대회”

--- a/content/archive/featured/오부치-일본수상-방한에-따른-한일시민연대-결의대회.md
+++ b/content/archive/featured/오부치-일본수상-방한에-따른-한일시민연대-결의대회.md
@@ -1,5 +1,5 @@
 ---
-title: 오부치 일본수상 방한에 따른 한일시민연대 결의대회
+title: "3월의 기록: 오부치 일본수상 방한에 따른 한일시민연대 결의대회"
 author: 기록팀
 date: 2023-03-21T05:44:03.454Z
 summary: 1999년 3월 20일, 19일 오부치 게이조 일본 총리의 방한에 맞추어 한일어업협정 폐기, 일본 군국주의 부활반대 등 요구하는
