(수정 전) 1992년 제1차 수요시위-> 1992년 초기 수요시위(수정 완료 제목)

--- a/content/items/ex-02/운동사관/침묵을깨트리다/첫수요집회 사본.md
+++ b/content/items/ex-02/운동사관/침묵을깨트리다/첫수요집회 사본.md
@@ -1,11 +1,11 @@
 ---
 reference_code:
 media_type:
-title: 1992년 제1차 수요시위
+title: 1992년 초기 수요시위
 summary: 한국정신대문제대책협의회, 1992-01-08
 image:
 description:
-modified_at:
+modified_at: 2023-05-21
 created_at:
 components:
 - https://r2.womenandwarmuseum.net/exhibition/ex-02/운동사관/침묵을깨트리다/첫수요집회%20사본.jpg
