Update 이달의 기록 “3월의-기록-오부치-일본수상-방한에-따른-한일시미연대-기자회견”

--- a/content/archive/featured/3월의-기록-오부치-일본수상-방한에-따른-한일시미연대-기자회견.md
+++ b/content/archive/featured/3월의-기록-오부치-일본수상-방한에-따른-한일시미연대-기자회견.md
@@ -7,10 +7,6 @@ image: /img/990320-오부치-수상-방한관련-기자-11-.jpg
 home_sticky: false
 pinned: false
 ---
-
-
-1999년 3월 20일, 탑골공원에서 결의대회를 마치고 서울YMCA에서 한일시민연대단체가 모여 기자회견을 시작..했었습니다
-
-
+1999년 3월 20일, 탑골공원에서 결의대회를 마치고 서울YMCA에서 한일시민연대단체가 모여 기자회견을 시작했었습니다.
 
 '완전한 과거청산 없이 미래관계란 없다!'
