Update 공지사항 “2023년도-전쟁과여성인권박물관-대학생-sns-기자단-모집-~2023-01-06”

--- a/content/connect/notice/2023년도-전쟁과여성인권박물관-대학생-sns-기자단-모집-~2023-01-06.md
+++ b/content/connect/notice/2023년도-전쟁과여성인권박물관-대학생-sns-기자단-모집-~2023-01-06.md
@@ -4,7 +4,7 @@ author: 관리자
 date: 2022-12-23T00:30:26.917Z
 image: /img/웹포스터-2023-대학생-sns-기자단-모집-웹자보.jpg
 home_sticky: false
-pinned: true
+pinned: false
 ---
 <2023년 전쟁과여성인권박물관 대학생 SNS 기자단 모집>
 
