--- a/content/archive/featured/3월의-기록-오부치-일본수상-방한에-따른-한일시미연대-기자회견.md
+++ b/content/archive/featured/3월의-기록-오부치-일본수상-방한에-따른-한일시미연대-기자회견.md
@@ -1,6 +1,6 @@
 ---
 title: "3월의 기록: 오부치 일본수상 방한에 따른 한일시민연대 기자회견"
-author: 기록팀
+author: 아카이브팀
 date: 2023-03-21T07:23:59.106Z
 summary: 1999년 3월 20일, 오부치 일본수상 방한에 따른 한일시민연대 기자회견에서 '완전한 과거청산 없이 미래관계란 없다'를 외치다!
 image: /img/990320-오부치-수상-방한관련-기자-11-.jpg
