--- a/content/archive/featured/오부치-일본수상-방한에-따른-한일시민연대-결의대회.md
+++ b/content/archive/featured/오부치-일본수상-방한에-따른-한일시민연대-결의대회.md
@@ -8,7 +8,7 @@ image: /img/990320-오부치-수상-방한-시민연대-44-.jpg
 home_sticky: false
 pinned: false
 ---
-19일 오부치 게이조 일본 총리의 방한에 맞추어 1999년 3월 20일, 이날 오전 서울 탑골공원에서 여러 시민들이 함께 평화에 대해 외쳤습니다. 
+1999년 3월 19일 오부치 게이조 일본 총리의 방한에 맞추어 1999년 3월 20일, 이날 오전 서울 탑골공원에서 여러 시민들이 함께 평화에 대해 외쳤습니다. 
 
 "유사시 일본 자위대의 작전영역을 동남아시아 전역으로 확대하는 등 미국과 일본의 군사력에 의해 한반도의 평화가 위협받고 있다"
 
