Update 공지사항 “일본군위안부문제와-평화-교육을-위한-교사-자율연수”

--- a/content/connect/notice/일본군위안부문제와-평화-교육을-위한-교사-자율연수.md
+++ b/content/connect/notice/일본군위안부문제와-평화-교육을-위한-교사-자율연수.md
@@ -11,11 +11,13 @@ pinned: false
 
 ◎주제: 일본군'위안부'문제와 평화 교육을 위한 교사 자율 연수
 
-◎내용: 일본군'위안부'문제 및 평화 교육 사례 소개 / 일본교사출신 연구자의 교육 사례 소개
+◎내용: 일본군'위안부'문제 및 평화 교육 사례 소개 / 일본교사출신 연구자의 
 
-/ 전쟁과여성인권박물관 관람 / 주제강연: 문제해결운동의역사와 나아갈 길 / 학교 교육 프로그램 만들기
+              교육 사례 소개 / 전쟁과여성인권박물관 관람 / 
 
- /  <교사평화나비> 모집 및 안내
+              주제강연: 문제해결운동의역사와 나아갈 길 / 학교 교육 프로그램 만들기/ 
+
+              <교사평화나비> 모집 및 안내
 
 ◎모집기간: 2023년 4월 18일~5월 8일
 
