Update 공지사항 “전쟁과여성인권박물관-개관-11주년-행사-안내”

--- a/content/connect/notice/전쟁과여성인권박물관-개관-11주년-행사-안내.md
+++ b/content/connect/notice/전쟁과여성인권박물관-개관-11주년-행사-안내.md
@@ -4,7 +4,7 @@ author: 박물관
 date: 2023-04-13T05:58:59.515Z
 summary: 2023년 5월 5일, 전쟁과여성인권박물관 개관 11주년 행사를 합니다.
 image: /img/photo_2023-04-13_15-00-26.jpg
-home_sticky: true
+home_sticky: false
 pinned: false
 ---
 
