Update 이달의 기록 “5월의-기록-일본-역사교과서-왜곡에-따른-항의방문-긴급-토론회-참여”

--- a/content/archive/featured/5월의-기록-일본-역사교과서-왜곡에-따른-항의방문-긴급-토론회-참여.md
+++ b/content/archive/featured/5월의-기록-일본-역사교과서-왜곡에-따른-항의방문-긴급-토론회-참여.md
@@ -1,5 +1,5 @@
 ---
-title: "5월의 기록: 일본 역사교과서 왜곡에 따른 항의방문, 긴급 토론회 참여"
+title: "5월의 기록: 일본 역사교과서 왜곡에 따른 항의방문, 역사교과서 왜곡 긴급 토론회 참여"
 author: 아카이브팀
 date: 2023-05-10T00:24:32.227Z
 image: /img/010501-바우넷주최-교과서왜곡-신급토론-8-.jpg
