Update 이달의 기록 “5월의-기록-일본-역사교과서-왜곡에-따른-일본-항의방문”

--- a/content/archive/featured/5월의-기록-일본-역사교과서-왜곡에-따른-일본-항의방문.md
+++ b/content/archive/featured/5월의-기록-일본-역사교과서-왜곡에-따른-일본-항의방문.md
@@ -1,5 +1,5 @@
 ---
-title: "5월의 기록: 일본 역사교과서 왜곡에 따른 일본 항의방문"
+title: "5월의 기록: 일본 역사교과서 왜곡에 따른 일본 항의방문, 일본 중의원 회관 앞 항의시위"
 author: 아카이브팀
 date: 2023-05-10T00:22:11.356Z
 image: /img/010427-일본-중의원회관-항의시위-16-.jpg
