Update 이달의 기록 “5월의-기록-일본-역사교과서-왜곡에-따른-항의방문-긴급-토론회-참여”

--- a/content/archive/featured/5월의-기록-일본-역사교과서-왜곡에-따른-항의방문-긴급-토론회-참여.md
+++ b/content/archive/featured/5월의-기록-일본-역사교과서-왜곡에-따른-항의방문-긴급-토론회-참여.md
@@ -6,6 +6,6 @@ image: /img/010501-바우넷주최-교과서왜곡-신급토론-8-.jpg
 home_sticky: false
 pinned: false
 ---
-2001년 4월 25일부터 5월 2일까지 일본 역사교과서 왜곡에 따른 일본 항의 방문이 있었습니다. 한국정신대문제대책협의회에서 양미강, 김윤옥, 지은희 활동가와 황금주, 김은례 할머니가 함께 일본을 방문했습니다. 
+2001년 4월 25일부터 5월 2일까지 일본 역사교과서 왜곡에 따른 일본 항의 방문이 있었습니다. 한국정신대문제대책협의회에서 실행위원 양미강 선생님, 공동대표 김윤옥과 지은희 선생님과 황금주, 김은례 할머니가 함께 일본을 방문했습니다. 
 
-5월 1일, 일본 단체, 바우넷 재팬을 주최로 개최된 일본 역사교과서왜곡 긴급 토론회에 참여하여 발표하였습니다.
+5월 1일, 일본 단체, 바우넷 재팬을 주최로 개최된 일본 역사교과서왜곡 긴급 토론회에 참여하여 발표하였습니다. 이 토론회에서 김윤옥 선생님께서 토론과 발표를 해주셨습니다.
