--- a/content/archive/featured/5월의-기록-일본-역사교과서-왜곡에-따른-일본-항의방문.md
+++ b/content/archive/featured/5월의-기록-일본-역사교과서-왜곡에-따른-일본-항의방문.md
@@ -6,6 +6,6 @@ image: /img/010427-일본-중의원회관-항의시위-16-.jpg
 home_sticky: false
 pinned: false
 ---
-2001년 4월 25일부터 5월 2일까지 일본 역사교과서 왜곡에 따른 일본 항의 방문이 있었습니다. 한국정신대문제대책협의회에서 양미강, 김윤옥, 지은희 활동가와 황금주, 김은례 할머니가 함께 일본을 방문했습니다.
+2001년 4월 25일부터 5월 2일까지 일본 역사교과서 왜곡에 따른 일본 항의 방문이 있었습니다. 한국정신대문제대책협의회에서 실행위원 양미강 선생님, 공동대표 김윤옥과 지은희 선생님과 황금주, 김은례 할머니가 함께 일본을 방문했습니다. 
 
 4월 27일, 일본 중의원 회관 앞에서 일본 역사교과서 왜곡 항의시위를 진행했습니다.
