Update 공지사항 “일본군위안부문제와-평화-교육을-위한-교사-자율연수”

--- a/content/connect/notice/일본군위안부문제와-평화-교육을-위한-교사-자율연수.md
+++ b/content/connect/notice/일본군위안부문제와-평화-교육을-위한-교사-자율연수.md
@@ -4,7 +4,7 @@ author: 박물관
 date: 2023-04-19T01:09:31.331Z
 summary: 정의기억연대에서 일본군'위안부'문제와 평화 교육을 위한 교사 자율연수를 진행합니다.
 image: /img/교사자율연수웹자보-002.jpg
-home_sticky: true
+home_sticky: false
 pinned: false
 ---
 <!--StartFragment-->
