--- a/content/connect/notice/2023년-하반기-자원활동가-모집.md
+++ b/content/connect/notice/2023년-하반기-자원활동가-모집.md
@@ -3,23 +3,17 @@ title: 2023년 하반기 자원활동가 모집
 author: 박물관
 date: 2023-05-27T05:09:30.805Z
 summary: 전쟁과여성인권박물관에서 2023년 하반기 자원활동가를 모집합니다.
-image: /img/전쟁과여성인권박물관-2023-하반기-자원활동가-모집-인스타-2.jpg
+image: /img/전쟁과여성인권박물관-2023-하반기-자원활동가-모집-인스타-.jpg
 home_sticky: true
 pinned: false
 ---
-
-
 전쟁과여성인권박물관에서 2023년 하반기 자원활동가를 모집합니다.
-
-
 
 
 
 모집기간
 
 \- 2023년 6월1일(목)~6월30일(금)
-
-
 
 
 
@@ -31,66 +25,52 @@ pinned: false
 
 \- 만 18세 이상 누구나
 
-
-
-
+ ﻿
 
 활동사전교육
 
-1차: 6월 24일, 오전 10시 30분
+\- 1차: 6월 24일, 오전 10시 30분 
 
-2차: 7월 1일, 오전 10시 30분
+\- 2차: 7월 1일, 오전 10시 30분
 
-
-
-
+ ﻿
 
 활동내용
 
-인포센터 업무: 관람티켓 및 관람방법 안내
+\- 인포센터 업무: 관람티켓 및 관람방법 안내 
 
-기록관리 업무: 기록물 목록화 작업
+\- 기록관리 업무: 기록물 목록화 작업
 
-업무지원: 후원물품/홍보자료 제작 및 정의연 활동 지원
+\- 업무지원: 후원물품/홍보자료 제작 및 정의연 활동 지원
 
-
-
-
+  ﻿
 
 활동일시
 
-2023년 6월 27일(화) ~ 12월 30일(토)
+\- 2023년 6월 27일(화) ~ 12월 30일(토)
 
-매주 화~토
+\- 매주 화~토
 
-오전조: 10시~13시 (3시간)
+\- 오전조: 10시~13시 (3시간)
 
-오후조: 14시~18시(4시간)
+\- 오후조: 14시~18시(4시간)
 
-
-
-
+ ﻿
 
 활동인증
 
-1365 자원봉사포털 봉사시간 입력
+\- 1365 자원봉사포털 봉사시간 입력
 
-
-
-
+ ﻿
 
 \* 활동시간 내 중식제공(전일활동가에 한함)
 
-
-
-
+ ﻿
 
 지원방법
 
 [bit.ly/warwomenvolunteer](bit.ly/warwomenvolunteer)
 
+ ﻿
 
-
-문의
-
-전쟁과여성인권박물관 02-393-5252
+문의: 전쟁과여성인권박물관 02-393-5252
