--- a/content/items/ex-04/section-02/19_'94 전후보상 국제포럼(2).md
+++ b/content/items/ex-04/section-02/19_'94 전후보상 국제포럼(2).md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 전후보상 국제포럼에 참석한 김학순과 Gertrudes Balisalisa 
-summary: 1994-08-14, 일본 도쿄에서 열린 전후보상 국제포럼에서 김학순과 필리핀 피해자 Gertrudes Balisalisa가 만났다. (양징자 기증)
+summary: 1994-08-14, 일본 도쿄에서 열린 전후보상 국제포럼에서 김학순과 필리핀 피해자 Gertrudes Balisalisa가 만났다. (시바자키 하루코 기증)
 image:
 description:
 modified_at:
