Update 공지사항 “정의기억연대와-극단-고래가-공동-주최한-사회적-예술-단막극-공모전의-수상작-낭독공연”

--- a/content/connect/notice/정의기억연대와-극단-고래가-공동-주최한-사회적-예술-단막극-공모전의-수상작-낭독공연.md
+++ b/content/connect/notice/정의기억연대와-극단-고래가-공동-주최한-사회적-예술-단막극-공모전의-수상작-낭독공연.md
@@ -4,12 +4,10 @@ author: 박물관
 date: 2023-06-23T09:09:08.513Z
 summary: 정의기억연대는 연대단체 협력사업으로 극단 고래와 '사회적 예술 단막극 공모전'을 공동주최하였습니다. 수상작 세 작품 중 <시의
   성>을 전쟁과여성인권박물관 교육관에서 낭독공연합니다.
-image: /img/photo_2023-06-21_11-41-57.jpg
+image: /img/극단고래웹자보-인스타-.jpg
 home_sticky: true
 pinned: false
 ---
-
-
 🐳사회적예술단막극 낭독 페스티벌🐳
 
 
@@ -30,11 +28,7 @@ pinned: false
 
 공연시간: 23.07.01(토) pm4:00
 
-공연장소: 전쟁과여성인권박물관 교육관
-
-(월드컵북로11길 20)
-
-
+공연장소: 전쟁과여성인권박물관 교육관 (월드컵북로11길 20)
 
 <시의 성>은 종교적 권위의 이름으로 자행되는 폭력에 신음하는 성소수자의 내면적 고통을 그린 작품으로, 간결하게 절제된 대사와 설득력 있게 구현된 캐릭터, 나아가 두 인물의 소외와 절망을 섬세하게 드러내는 장면구성이 인상적인 작품입니다.
 
