Update 공지사항 “일본군‘위안부’-문제-전문-디지털-아카이브-전쟁과여성인권아카이브-를-오픈합니다”

--- a/content/connect/notice/일본군‘위안부’-문제-전문-디지털-아카이브-전쟁과여성인권아카이브-를-오픈합니다.md
+++ b/content/connect/notice/일본군‘위안부’-문제-전문-디지털-아카이브-전쟁과여성인권아카이브-를-오픈합니다.md
@@ -2,8 +2,8 @@
 title: 일본군‘위안부’ 문제 전문 디지털 아카이브 <전쟁과여성인권아카이브>를 오픈합니다
 author: 아카이브팀
 date: 2023-07-03T04:21:57.285Z
-home_sticky: false
-pinned: false
+home_sticky: true
+pinned: true
 ---
 ![](/img/아카이브_poster_final.png)
 
