Update 공지사항 “일본군‘위안부’-문제-전문-디지털-아카이브-전쟁과여성인권아카이브-를-오픈합니다”

--- a/content/connect/notice/일본군‘위안부’-문제-전문-디지털-아카이브-전쟁과여성인권아카이브-를-오픈합니다.md
+++ b/content/connect/notice/일본군‘위안부’-문제-전문-디지털-아카이브-전쟁과여성인권아카이브-를-오픈합니다.md
@@ -42,9 +42,9 @@ pinned: true
   \
   We will develop Japanese and English services by the second half of 2023 and expand our collection.
 * War and Women’s Human Rights Archives\
-  archives.womenandwar.net\
+  archives.womenandwar.net
 * Opening Event!\
-  archives.womenandwar.net/event\
+  archives.womenandwar.net/event
 * Please be our supporter through donations for remembrance and historical truth!\
   Paypal: [info@womenandwar.net](mailto:info@womenandwar.net) | paypal.me/warwomen\
   \
@@ -56,8 +56,7 @@ pinned: true
   \
   日本政府は依然として戦争犯罪を認めないまま謝罪せず、韓国政府は「未来志向的な日韓関係の発展」のために、日本との歴史問題にむりやり蓋を閉じようとしています。日本軍「慰安婦」被害事実を否認・歪曲し、サバイバーを侮辱する歴史否定勢力は、歴史的真実と正義を脅かしています。歴史否定勢力の妨害やイデオロギーに偏った政治権力の影響によって、記録と記憶が誤用され消されることのない様に、「戦争と女性の人権アーカイブ」は日本軍性奴隷制の真実、サバイバーの苦しんできた苦痛の歴史、正義に向けた勇気なる叫びを正しく記録し保全しようとしています。\
   \
-  アーカイブは2023年下半期まで、日本語・英語検索サービスを構築し、持続的にコレクションを回被圧・拡張しながら記録を活用した多様なコンテンツをサービスする予定です。みなさまの多大なるご関心とご利用をお願い申し上げます。\
-  \
+  アーカイブは2023年下半期まで、日本語・英語検索サービスを構築し、持続的にコレクションを回被圧・拡張しながら記録を活用した多様なコンテンツをサービスする予定です。みなさまの多大なるご関心とご利用をお願い申し上げます。
 * 「戦争と女性のアーカイブ」\
   archives.womenandwar.net\
 * オープン・イベントに参加する\
