Update 공지사항 “일본군‘위안부’-문제-전문-디지털-아카이브-전쟁과여성인권아카이브-를-오픈합니다”

--- a/content/connect/notice/일본군‘위안부’-문제-전문-디지털-아카이브-전쟁과여성인권아카이브-를-오픈합니다.md
+++ b/content/connect/notice/일본군‘위안부’-문제-전문-디지털-아카이브-전쟁과여성인권아카이브-를-오픈합니다.md
@@ -11,47 +11,40 @@ pinned: true
 \
 정의기억연대는 일본군성노예제도에 관한 역사 자료, 일본군‘위안부’ 피해생존자들의 기록, 일본군성노예제 문제해결 운동기록을 수집, 보존하고 서비스하기 위한 전쟁과여성인권아카이브(archives.womenandwar.net)를 구축하여 7월 3일 정식 오픈(공개)합니다. 시민사회단체로서는 국내 최초로 선보이는 일본군‘위안부’ 문제 전문 디지털 아카이브입니다.
 
+**온전히 시민의 힘으로 만들어진, 역사적 진실과 여성인권, 평화를 위한 아카이브**\
+최근 한국 정부는 “미래지향적 한일관계의 발전”이라는 명목으로 일본군성노예제를 비롯한 일본과의 역사문제를 무작정 덮으려는 태도를 보이고 있습니다. 역사부정 세력은 조직적으로 역사적 진실을 무너뜨리고 매주 수요시위 현장에 나타나 시민들의 앞에 혐오와 차별의 언어를 쏟아냅니다. 일본군‘위안부’ 피해사실을 부인하고 왜곡하며 피해자를 모욕하는 행태가 그 어느 때보다 만연한 지금, 역사적 진실과 정의가 흔들리지 않고 바로 설 수 있어야 합니다. 역사부정 세력의 방해와 이념편향된 정치권력의 영향 때문에 기록과 기억이 오용되거나 지워져서는 안 됩니다.\
+정의기억연대는 일본군성노예제의 진실, 피해자들이 겪은 고통의 역사, 정의를 향한 용기 있는 외침을 기록하고 보전하는 일에 책임을 느낍니다. 디지털 아카이브 구축 사업의 전 과정은 국내외 시민들의 후원금으로 이루어졌습니다. 전쟁과여성인권아카이브는 전 세계 시민들과 함께 역사적 진실과 정의를 지켜내고 인권과 평화의 가치를 확산하는 아카이브가 되고자 합니다.
 
+**국내외 피해생존자와 활동가의 역사를 담은 <아시아연대회의> 컬렉션 개발**\
+오픈과 함께 선보이는 첫 번째 컬렉션은 “일본군‘위안부’ 문제해결을 위한 아시아연대회의”입니다. 아시아연대회의는 1992년 서울에서 처음 개최된 초국적 여성연대로, 일본군‘위안부’ 문제를 둘러싼 다양한 의제를 제기하고 논의하며 국내외 운동을 하나로 모아 그 의미가 큽니다.\
+전쟁과여성인권아카이브는 아시아연대회의 기록물 2,452건의 목록, 온라인 원문보기 서비스뿐 아니라 아시아연대회의의 역사와 기록에 대한 이해를 돕는 정보사전, 타임라인 및 지도 기반 스토리텔링 등 시각화도구를 활용해 만든 콘텐츠 등을 제공합니다. 기록 중에는 국내외 피해생존자들의 생전 모습을 담은 사진과 영상도 다수 포함되어 있습니다. 피해생존자들의 마음을 생생하게 느끼며 생전의 소망을 재확인하는 계기가 될 것입니다.
 
-* **온전히 시민의 힘으로 만들어진, 역사적 진실과 여성인권, 평화를 위한 아카이브**\
-  최근 한국 정부는 “미래지향적 한일관계의 발전”이라는 명목으로 일본군성노예제를 비롯한 일본과의 역사문제를 무작정 덮으려는 태도를 보이고 있습니다. 역사부정 세력은 조직적으로 역사적 진실을 무너뜨리고 매주 수요시위 현장에 나타나 시민들의 앞에 혐오와 차별의 언어를 쏟아냅니다. 일본군‘위안부’ 피해사실을 부인하고 왜곡하며 피해자를 모욕하는 행태가 그 어느 때보다 만연한 지금, 역사적 진실과 정의가 흔들리지 않고 바로 설 수 있어야 합니다. 역사부정 세력의 방해와 이념편향된 정치권력의 영향 때문에 기록과 기억이 오용되거나 지워져서는 안 됩니다.\
-  정의기억연대는 일본군성노예제의 진실, 피해자들이 겪은 고통의 역사, 정의를 향한 용기 있는 외침을 기록하고 보전하는 일에 책임을 느낍니다. 디지털 아카이브 구축 사업의 전 과정은 국내외 시민들의 후원금으로 이루어졌습니다. 전쟁과여성인권아카이브는 전 세계 시민들과 함께 역사적 진실과 정의를 지켜내고 인권과 평화의 가치를 확산하는 아카이브가 되고자 합니다.
+**끝없이 성장하는 일본군‘위안부’ 문제 기록의 세계적 보고가 되기 위해**\
+국내외 관련 자료를 적극적으로 수집·정리해 전 세계 시민들에게 공유할 예정입니다. 이를 위해 우선 2023년 하반기까지 일본어, 영어 검색 시스템을 구축해 전 세계 시민들이 손쉽게 접근·활용할 수 있도록 하고, 소장기록을 활용한 학습지도안과 교사를 위한 참고자료 목록 등 교육용 콘텐츠도 제공할 계획입니다. 이후 소장기록과 국내외 기증기록 정리를 통해, 수요시위, 피해생존자 증언, 국제사회 활동, 역사자료, 활동소식지 등 새로운 아카이브 컬렉션을 개발·확장하고, 기록을 활용한 쉽고 재밌는 콘텐츠도 지속적으로 만들어 나갈 것입니다.
 
+**전쟁과여성인권아카이브 오픈 기념 이벤트**\
+각자의 집에 잠들어 있는 국내외 사진, 문서 등 기록을 깨워 아카이브에 기증하는 <살아있는 증거, 살아있는 기록> 이벤트, 전쟁과여성인권아카이브 웹사이트에서 오류를 찾아 제보하는 <아카이브 뚝딱뚝딱 고치기> 등 오픈 기념 이벤트를 마련했습니다. 자세한 내용은 아래 붙임자료에서 확인해 주시기 바랍니다.\
+\
+전쟁과여성인권아카이브는 명실공히 전 세계에 흩어져 있는 일본군‘위안부’ 문제 기록을 연결하는 국제적 플랫폼이자, 기록을 활용한 운동의 확장·재생산 공간, 여성인권과 평화를 향한 연대의 공간이 될 것입니다. 많은 관심과 이용 부탁드립니다!\
+ \
+전쟁과여성인권아카이브(archives.womenandwar.net) 바로가기\
+\
+문의: [archives@womenandwar.net](mailto:archives@womenandwar.net)\
+\
+2023년 7월 3일\
+\
+일본군성노예제 문제해결을 위한 정의기억연대\
+\
+---\
+\
+✨ **We are now opening our War and Women’s Human Rights Archives online!**✨\
+\
+We are finally introducing our War and Women’s human rights Archives to collect historical materials about the Japanese military sexual slavery issue, resolution movement documents, and victim survivors’ footage to share collections worldwide.\
+\
+Both the South Korean and Japanese governments neglect the Japanese “comfort women” issue, while the history denialists speak out the word of hatred and discrimination. To ensure they do not abuse records, we will preserve the truth of the Japanese military sexual slavery issue, the victims’ history, and their courageous cry for justice.\
+\
+We will develop Japanese and English services by the second half of 2023 and expand our collection.
 
-
-* **국내외 피해생존자와 활동가의 역사를 담은 <아시아연대회의> 컬렉션 개발**\
-  오픈과 함께 선보이는 첫 번째 컬렉션은 “일본군‘위안부’ 문제해결을 위한 아시아연대회의”입니다. 아시아연대회의는 1992년 서울에서 처음 개최된 초국적 여성연대로, 일본군‘위안부’ 문제를 둘러싼 다양한 의제를 제기하고 논의하며 국내외 운동을 하나로 모아 그 의미가 큽니다.\
-  전쟁과여성인권아카이브는 아시아연대회의 기록물 2,452건의 목록, 온라인 원문보기 서비스뿐 아니라 아시아연대회의의 역사와 기록에 대한 이해를 돕는 정보사전, 타임라인 및 지도 기반 스토리텔링 등 시각화도구를 활용해 만든 콘텐츠 등을 제공합니다. 기록 중에는 국내외 피해생존자들의 생전 모습을 담은 사진과 영상도 다수 포함되어 있습니다. 피해생존자들의 마음을 생생하게 느끼며 생전의 소망을 재확인하는 계기가 될 것입니다.
-
-
-
-* **끝없이 성장하는 일본군‘위안부’ 문제 기록의 세계적 보고가 되기 위해**\
-  국내외 관련 자료를 적극적으로 수집·정리해 전 세계 시민들에게 공유할 예정입니다. 이를 위해 우선 2023년 하반기까지 일본어, 영어 검색 시스템을 구축해 전 세계 시민들이 손쉽게 접근·활용할 수 있도록 하고, 소장기록을 활용한 학습지도안과 교사를 위한 참고자료 목록 등 교육용 콘텐츠도 제공할 계획입니다. 이후 소장기록과 국내외 기증기록 정리를 통해, 수요시위, 피해생존자 증언, 국제사회 활동, 역사자료, 활동소식지 등 새로운 아카이브 컬렉션을 개발·확장하고, 기록을 활용한 쉽고 재밌는 콘텐츠도 지속적으로 만들어 나갈 것입니다.
-
-
-
-* **전쟁과여성인권아카이브 오픈 기념 이벤트**\
-  각자의 집에 잠들어 있는 국내외 사진, 문서 등 기록을 깨워 아카이브에 기증하는 <살아있는 증거, 살아있는 기록> 이벤트, 전쟁과여성인권아카이브 웹사이트에서 오류를 찾아 제보하는 <아카이브 뚝딱뚝딱 고치기> 등 오픈 기념 이벤트를 마련했습니다. 자세한 내용은 아래 붙임자료에서 확인해 주시기 바랍니다.\
-  \
-  전쟁과여성인권아카이브는 명실공히 전 세계에 흩어져 있는 일본군‘위안부’ 문제 기록을 연결하는 국제적 플랫폼이자, 기록을 활용한 운동의 확장·재생산 공간, 여성인권과 평화를 향한 연대의 공간이 될 것입니다. 많은 관심과 이용 부탁드립니다!\
-   \
-  전쟁과여성인권아카이브(archives.womenandwar.net) 바로가기\
-  \
-  문의: [archives@womenandwar.net](mailto:archives@womenandwar.net)\
-  \
-  2023년 7월 3일\
-  \
-  일본군성노예제 문제해결을 위한 정의기억연대\
-  \
-  ---\
-  \
-  ✨ **We are now opening our War and Women’s Human Rights Archives online!**✨\
-  \
-  We are finally introducing our War and Women’s human rights Archives to collect historical materials about the Japanese military sexual slavery issue, resolution movement documents, and victim survivors’ footage to share collections worldwide.\
-  \
-  Both the South Korean and Japanese governments neglect the Japanese “comfort women” issue, while the history denialists speak out the word of hatred and discrimination. To ensure they do not abuse records, we will preserve the truth of the Japanese military sexual slavery issue, the victims’ history, and their courageous cry for justice.\
-  \
-  We will develop Japanese and English services by the second half of 2023 and expand our collection.
 * War and Women’s Human Rights Archives\
   archives.womenandwar.net
 * Opening Event!\
