--- a/content/guide/stores/나비반지.md
+++ b/content/guide/stores/나비반지.md
@@ -3,7 +3,7 @@ title: 나비반지
 price: 3,000원
 buying_link: https://womenandwarmuseum.net/guide/stores/
 featured: /img/9가지-반지.jpg
-components: /img/러블리핑크-스트랩-민트.jpg
+components: /img/나비링-모듬.jpg
 ---
 나비반지﻿(Butterfly Ring)
 
