Update 뮤지엄샵 “나비반지”

--- a/content/guide/stores/나비반지.md
+++ b/content/guide/stores/나비반지.md
@@ -3,8 +3,10 @@ title: 나비반지
 price: 3,000원
 buying_link: https://womenandwarmuseum.net/guide/stores/
 featured: /img/9가지-반지.jpg
-components: 
-- /img/나비링-모듬.jpg
+components:
+  - /img/나비링-모듬.jpg
+  - /img/베이비불루-스트렙-핑크.jpg
+  - /img/9가지-반지.jpg
 ---
 나비반지﻿(Butterfly Ring)
 
