--- a/content/guide/stores/나비반지.md
+++ b/content/guide/stores/나비반지.md
@@ -2,11 +2,11 @@
 title: 나비반지
 price: 3,000원
 buying_link: https://womenandwarmuseum.net/guide/stores/
-featured: /img/9가지-반지.jpg
+featured: https://womenandwarmuseum.net/img/9가지-반지.jpg
 components:
-  - /img/나비링-모듬.jpg
-  - /img/베이비불루-스트렙-핑크.jpg
-  - /img/9가지-반지.jpg
+  - https://womenandwarmuseum.net/img/나비링-모듬.jpg
+  - https://womenandwarmuseum.net/img/베이비불루-스트렙-핑크.jpg
+  - https://womenandwarmuseum.net/img/9가지-반지.jpg
 ---
 나비반지﻿(Butterfly Ring)
 
