Update 뮤지엄샵 “나비반지”

--- a/content/guide/stores/나비반지.md
+++ b/content/guide/stores/나비반지.md
@@ -3,10 +3,7 @@ title: 나비반지
 price: 3,000원
 buying_link: https://womenandwarmuseum.net/guide/stores/
 featured: https://womenandwarmuseum.net/img/9가지-반지.jpg
-components:
-  - https://womenandwarmuseum.net/img/나비링-모듬.jpg
-  - https://womenandwarmuseum.net/img/베이비불루-스트렙-핑크.jpg
-  - https://womenandwarmuseum.net/img/9가지-반지.jpg
+components: /img/오로라퍼플-스트랩-핑크.jpg
 ---
 나비반지﻿(Butterfly Ring)
 
