Update 뮤지엄샵 “나비반지”

--- a/content/guide/stores/나비반지.md
+++ b/content/guide/stores/나비반지.md
@@ -1,7 +1,7 @@
 ---
 title: 나비반지
 price: 3,000원
-buying_link: https://womenandwarmuseum.net/guide/stores/
+buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
 featured: https://womenandwarmuseum.net/img/9가지-반지.jpg
 components: /img/오로라퍼플-스트랩-핑크.jpg
 ---
