--- a/content/connect/notice/정의기억연대와-극단-고래가-공동-주최한-사회적-예술-단막극-공모전의-수상작-낭독공연.md
+++ b/content/connect/notice/정의기억연대와-극단-고래가-공동-주최한-사회적-예술-단막극-공모전의-수상작-낭독공연.md
@@ -5,7 +5,7 @@ date: 2023-06-23T09:09:08.513Z
 summary: 정의기억연대는 연대단체 협력사업으로 극단 고래와 '사회적 예술 단막극 공모전'을 공동주최하였습니다. 수상작 세 작품 중 <시의
   성>을 전쟁과여성인권박물관 교육관에서 낭독공연합니다.
 image: /img/극단고래웹자보-인스타-.jpg
-home_sticky: true
+home_sticky: false
 pinned: false
 ---
 🐳사회적예술단막극 낭독 페스티벌🐳
